Base di partenza

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>prototipo-vue-redux</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <span>{{soggetto.nominativo}}</span> - <span>{{soggetto.indirizzo}}</span>
+    </div>
   </body>
 </html>
