--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>prototipo-vue-redux</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Prototipo VueJs + Redux</title>
+    <link href="static/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
     <div id="app">
-      <span>{{soggetto.nominativo}}</span> - <span>{{soggetto.indirizzo}}</span>
-    </div>
+      
+      <!-- Navigation -->
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Menu</a>
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Counter <span class="sr-only">(current)</span></a></li>
+              <li><a href="#">CRUD</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+      <!-- Counter -->
+      <div style="margin-left: 10px;">
+        <span>{{count}}</span>
+        <button @click="handleIncrement">+</button>
+        <button @click="handleDecrement">-</button>
+      </div>
+
+    </div>  
+    
+    <script src="static/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="static/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
