Suddivisione per componenti

--- a/index.html
+++ b/index.html
@@ -33,22 +33,11 @@
       </nav>
 
       <!-- Machine -->
-      <h3>Machine State</h3>
-      <div style="margin-left: 10px;">
-        <div>
-          <span>IP Address: </span><span>{{machine.machineStatus.ip}}</span>
-        </div>
-        <button @click="scan">Scan</button>
-      </div>
+      <Machine></Machine>
 
       <!-- Counter -->
-      <h3>Counter</h3>
-      <div style="margin-left: 10px;">
-        <span>{{count}}</span>
-        <button @click="handleIncrement">+</button>
-        <button @click="handleDecrement">-</button>
-      </div>
-
+      <Counter></Counter>
+        
     </div>  
     
     <script src="static/vendor/jquery/dist/jquery.min.js"></script>
